fixed text alignment and image positioning

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -50,6 +50,7 @@ body {
 #page-header p{
   color: #000000;
   font-weight: bold;
+  margin-bottom: 145px;
 }
 
 #headshot-image{
@@ -62,13 +63,14 @@ body {
   border: 5px solid #cccccc;
   margin-left: -75px;
   margin-top: -75px;
+  position: absolute;
 }
 
 #cv-content{
   background: #bec4bf;
   padding: 10px;
   border-radius: 15px;
-  margin-top: 145px;
+  margin-top: 30px;
   margin-right: auto;
   margin-left: auto;
   max-width: 960px;
@@ -77,6 +79,10 @@ body {
 #employer-content{
   justify-content: center;
   align-items: center;
+}
+
+#employer-list{
+  padding-left: 0;
 }
 
 #employer-list h2{
@@ -103,6 +109,10 @@ body {
 #education-content{
   justify-content: center;
   align-items: center;
+}
+
+#education-list{
+  padding-left: 0;
 }
 
 #education-list h2{
